# jobpool

./: CMakeLists.txt  LICENSE  README.md
include/: dns_resolver.h  job_pool.h
src/: complex_tasks_with_dns.cc  job_pool.cc
tests/: dns_resolver_test.cc  job_pool_test.cc
